# service-bot-rust

./: build.sh  docker-compose.yml  local.yml  run.sh
.envs/.local/: .rocket
api_server/: Cargo.toml  Dockerfile
api_server/migrations/2020-10-04-071517_create_website/: down.sql  up.sql
api_server/src/: main.rs  schema.rs
api_server/src/websites/: handler.rs  mod.rs  repository.rs
