[package]
name = "api_server"
version = "0.2.0"
authors = ["Yale Cason <yale.cason@gmail.com>", "Mike Farrell <mrmikefarrell@gmail.com>"]

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.0"
chrono = {version = "0.4", features = ["serde"] }
diesel = { version = "1.4.1", features = ["postgres","chrono",  "uuid"] }
uuid = { version = "0.6.1", features = ["v4", "serde"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool", "uuid"]
